--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.appdynamics.extensions</groupId>
     <artifactId>flowmap-builder</artifactId>
-    <version>1.0.5-BETA</version>
+    <version>1.0.6-BETA</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,11 +38,6 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpasyncclient</artifactId>
             <version>4.1.3</version>
         </dependency>
@@ -51,6 +46,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -124,10 +124,9 @@
                                         <property name="target.dir" value="${project.build.directory}/${project.artifactId}"/>
                                         <mkdir dir="${target.dir}"/>
                                         <copy todir="${target.dir}">
-                                            <!--<fileset dir="src/main/resources" includes="log4j.xml"/>-->
-                                            <!--<fileset dir="src/main/resources" includes="config.yml" />-->
                                             <fileset dir="${project.basedir}" includes="README.md" />
                                         </copy>
+                                        <copy file="${project.basedir}/src/main/resources/log4j.flowmap-builder.xml" tofile="${target.dir}/log4j.xml"/>
                                         <copy todir="${target.dir}">
                                             <fileset dir="${project.build.directory}"
                                                      includes="${project.artifactId}-${project.version}.${project.packaging}"/>
@@ -135,7 +134,6 @@
                                         <zip destfile="${target.dir}-${project.version}.zip">
                                             <zipfileset dir="${target.dir}" filemode="755" prefix="${project.artifactId}"/>
                                         </zip>
-                                        <!--<delete dir="${target.dir}"/>-->
                                     </target>
                                 </configuration>
                                 <goals>
@@ -148,18 +146,4 @@
             </build>
         </profile>
     </profiles>
-    <distributionManagement>
-        <repository>
-            <id>nexus</id>
-            <name>Nexus Third Party For CS</name>
-            <url>http://nexus.corp.appdynamics.com/nexus/content/repositories/third-party-for-cs/</url>
-        </repository>
-    </distributionManagement>
-    <repositories>
-        <repository>
-            <id>nexus-tp</id>
-            <name>Nexus Third Party For CS</name>
-            <url>http://nexus.corp.appdynamics.com/nexus/content/repositories/third-party-for-cs/</url>
-        </repository>
-    </repositories>
 </project>
